--- a/index.html
+++ b/index.html
@@ -4,10 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="src/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Film-watching-tailwind</title>
-    <!-- <script src="https://cdn.tailwindcss.com"></script> -->
-    <link href="/dist/output.css" rel="stylesheet">
-
+    <title>Tailwind-Film-Watching</title>
   </head>
   <body>
     <div id="root"></div>
